# rat

./: Cargo.toml  LICENSE  README
src/: main.rs
