[package]
name = "rat-cat"
version = "0.1.0"
authors = ["Simon Roberts <simon@sirob.dev>"]
edition = "2018"
license = "MIT"
description = "The GNU tool cat but in Rust. I wrote this as first foray into Rust. Constructive feedback is most welcome."
homepage = "https://github.com/si-rob/rat"
repository = "https://github.com/si-rob/rat"
keywords = ["cli", "beginner", "cat"]
categories = ["command-line-utilities"]


[dependencies]
structopt = "0.3.14"

